Add frontend and backend files

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 # Node modules & dependencies
 # ========================
 node_modules/
+.env
+logs/
+dist/
+build/
+
 
 # ========================
 # Logs
